# evolve-universe

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: start_all.sh
src/evolvebot_universe/: registry_bridge_cli.py  registry_cli.py  registry_server.py  registry_state.py  relay_cli.py  relay_server.py  utils.py
src/zerobot_universe/: __init__.py  registry_bridge_cli.py  registry_cli.py  registry_server.py  relay_cli.py  relay_server.py  utils.py
