[project]
name = "zerobot-universe"
version = "0.1.0"
description = "Public Universe registry + relay services for zerobot"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "zerobot contributors"}
]
keywords = ["ai", "agent", "registry", "relay", "zerobot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "loguru>=0.7.0",
    "websockets>=12.0",
    "pydantic>=2.0.0",
]

[project.scripts]
zerobot-universe-registry = "zerobot_universe.registry_cli:app"
zerobot-universe-registry-bridge = "zerobot_universe.registry_bridge_cli:app"
zerobot-universe-relay = "zerobot_universe.relay_cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["zerobot_universe"]

[tool.hatch.build.targets.wheel.sources]
"zerobot_universe" = "src/zerobot_universe"

[tool.hatch.build.targets.sdist]
include = [
    "src/zerobot_universe",
    "README.md",
    "LICENSE",
]
