[project]
name = "evolvebot-universe"
version = "0.1.0"
description = "Public Universe registry + relay services for evolvebot"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "evolvebot contributors"}
]
keywords = ["ai", "agent", "registry", "relay", "evolvebot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "loguru>=0.7.0",
    "websockets>=12.0",
    "pydantic>=2.0.0",
]

[project.scripts]
evolvebot-universe-registry = "evolvebot_universe.registry_cli:app"
evolvebot-universe-registry-bridge = "evolvebot_universe.registry_bridge_cli:app"
evolvebot-universe-relay = "evolvebot_universe.relay_cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["evolvebot_universe"]

[tool.hatch.build.targets.wheel.sources]
"evolvebot_universe" = "src/evolvebot_universe"

[tool.hatch.build.targets.sdist]
include = [
    "src/evolvebot_universe",
    "README.md",
    "LICENSE",
]